--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: ERC-HALF
-description: The HALF ERC-grant.
+title: HALF: Harmonic Analysis and Lean Formalization
+description: ERC Synergy Grant.
 theme: jekyll-theme-tactile
